Fix horizontal scroller padding (#190)
* chore(frontend): improve padding in horizontal scrollable list

* chore(frontend): cap html and body elements to screen

--- a/packages/frontend/src/global.css
+++ b/packages/frontend/src/global.css
@@ -16,8 +16,9 @@
     }
 }
 
+html,
 body {
-    overflow-x: hidden;
+    @apply w-screen h-screen overflow-x-hidden;
 }
 
 .grid-area-hero {
